# usbc_tester

./: .gitignore  .gitmodules  README.md  usbc_tester.py
.cargo/: config
hw/: README.md  tester.SchDoc  usbc-test-v1.PcbDoc  usbc-test-v1.PrjPcb
hw/case/: tester-base^usbc-test-v1.STL
precursors/: csr.csv  soc.svd
rtl/: sbled.py
svd2utra/src/: generate.rs
sw/: Cargo.toml
sw/betrusted-hal/: Cargo.toml
sw/betrusted-hal/src/: hal_time.rs  lib.rs
sw/src/: adc.rs  main.rs  sbled.rs  screen.rs
xtask/src/: main.rs
